--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "bootstrap": "4.0.0",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
+    "google-map-react": "^1.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-popper": "0.9.2",
     "react-router": "^5.2.0",
     "react-router-dom": "4.2.2",
