--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "4.0.0",
+    "bootstrap": "^4.5.0",
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "google-map-react": "^1.1.7",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.2.1",
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-popper": "0.9.2",
