--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap-social": "5.1.1",
     "font-awesome": "4.7.0",
     "google-map-react": "^1.1.7",
+    "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
