--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^16.13.1",
     "react-google-maps": "^9.4.5",
     "react-popper": "0.9.2",
+    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.4.1",
     "reactstrap": "5.0.0",
+    "redux": "^4.0.5",
     "typeface-courgette": "^0.0.72"
   },
   "scripts": {
